--- a/style.css
+++ b/style.css
@@ -1001,7 +1001,7 @@ nav ul li a {
     position: absolute;
     top: 3900px;
     height: 120px;
-    width: 310px;
+    width: 100%;
     left: 1px;
 }
 
