--- a/style.css
+++ b/style.css
@@ -989,6 +989,13 @@ nav ul li a {
     width: 50px;
     height: 50px;
 }
+.last-section-img4 {
+    position: absolute;
+    top: 3800px;
+    left: 0px;
+    width: 1px;
+    height: 1px;
+}
 .last-section-img5 {
     position: absolute;
     top: 3810px;
